crates/uitest/fixtures/mir_check/borrowck_load_handle_from_aggregate_then_write.snap
---
source: crates/uitest/tests/mir_check.rs
expression: res
input_file: fixtures/mir_check/borrowck_load_handle_from_aggregate_then_write.fe
---
error[11-0002]: borrow conflict in `fn borrowck_load_handle_from_aggregate_then_write`
  ┌─ borrowck_load_handle_from_aggregate_then_write.fe:9:5
  │
7 │     let boxed: HandleBox = HandleBox { h: mut value }
  │                                               ----- `value` is borrowed here
8 │     let handle: mut u256 = boxed.h
9 │     value = 1
  │     ^^^^^^^^^ access overlaps an active `mut` borrow
